CPD-62 Add new endpoint for statistics
